compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__assert_statement_followed_by_statement.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1896
expression: assert let a = 10
snapshot_kind: text
---
----- SOURCE CODE
assert let a = 10

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:8
  │
1 │ assert let a = 10
  │        ^^^ I was not expecting this

Found the keyword `let`, expected one of: 
- An expression
